fixes admin box alignment

--- a/resources/assets/less/overrides.less
+++ b/resources/assets/less/overrides.less
@@ -714,6 +714,11 @@ th.css-location > .th-inner::before {
     margin-top:50px
   }
 }
+@media screen and (max-width: 1318px) and (min-width: 1200px){
+  .box{
+    height:170px;
+  }
+}
 
 .ellipsis {
   overflow: hidden;
